<resources>
    <string name="app_name">InstaHelp</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember me</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>

</resources>
