<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@drawable/sign_up_background"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/activity_sign_up"
    tools:context="com.example.ayhoom.instahelpproject.SignUpActivity">

    <EditText
        android:id="@+id/editText_firstName"
        android:hint="@string/first_name"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:layout_width="@dimen/sign_up_name_width"
        android:layout_height="@dimen/sign_up_fields_height"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="start|center"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

    <EditText
        android:id="@+id/editText_lastName"
        android:hint="@string/last_name"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:layout_width="@dimen/sign_up_name_width"
        android:layout_height="@dimen/sign_up_fields_height"
        android:inputType="text"
        android:gravity="start|center"
        android:layout_alignTop="@+id/editText_firstName"
        android:layout_toRightOf="@+id/editText_firstName"
        android:layout_toEndOf="@+id/editText_firstName" />

    <EditText
        android:id="@+id/editText_userName"
        android:hint="@string/user_name"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:layout_width="@dimen/sign_up_fields_width"
        android:layout_height="@dimen/sign_up_fields_height"
        android:inputType="text"
        android:gravity="start|center"
        android:layout_below="@+id/editText_firstName"
        android:layout_alignLeft="@+id/editText_firstName"
        android:layout_alignStart="@+id/editText_firstName" />

    <EditText
        android:id="@+id/editText_email"
        android:textSize="20sp"
        android:layout_width="@dimen/sign_up_fields_width"
        android:layout_height="@dimen/sign_up_fields_height"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:textColorHint="@color/grey"
        android:gravity="start|center"
        android:layout_below="@+id/editText_userName"
        android:layout_alignLeft="@+id/editText_userName"
        android:layout_alignStart="@+id/editText_userName" />

    <EditText
        android:id="@+id/editText_password"
        android:textSize="20sp"
        android:layout_width="@dimen/sign_up_fields_width"
        android:layout_height="@dimen/sign_up_fields_height"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:gravity="start|center"
        android:layout_below="@+id/editText_email"
        android:layout_alignLeft="@+id/editText_email"
        android:layout_alignStart="@+id/editText_email" />

    <EditText
        android:id="@+id/editText_confirmPassword"
        android:textSize="20sp"
        android:layout_width="@dimen/sign_up_fields_width"
        android:layout_height="@dimen/sign_up_fields_height"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/grey"
        android:gravity="start|center"
        android:layout_below="@+id/editText_password"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignStart="@+id/editText_password" />

    <EditText
        android:id="@+id/editText_phone"
        android:textSize="20sp"
        android:layout_width="@dimen/sign_up_fields_width"
        android:layout_height="@dimen/sign_up_fields_height"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:textColorHint="@color/grey"
        android:gravity="start|center"
        android:layout_below="@+id/editText_confirmPassword"
        android:layout_alignLeft="@+id/editText_confirmPassword"
        android:layout_alignStart="@+id/editText_confirmPassword" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp" />
</RelativeLayout>
