<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@drawable/log_in_background"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/activity_log_in"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/imageView_logInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/log_in_title"
        android:layout_above="@+id/editText_userName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_above="@+id/editText_password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_above="@+id/checkbox_rememberMe"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/checkbox_rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textSize="12sp"
        android:layout_above="@+id/button_logIn"
        android:buttonTint="@color/white"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignStart="@+id/editText_password"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/button_logIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_above="@+id/button_signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="5dp" />

</RelativeLayout>
